# rogue-river-availability-monitor

./: .gitignore  make.cmd  pyproject.toml  requirements.txt
data/raw/rogue_retrieved_availability/retrieval_date=2023-05-09/: part-84ba89aa2ed848b3a5479315705f95ae.csv
data/raw/rogue_retrieved_availability/retrieval_datetime=2023-05-09T06:20:42.765761/: part-a29ba852f9864afa9e9a4c026346a6c9.csv
data/raw/rogue_retrieved_availability/retrieval_datetime=2023-05-31T094116.071591/: part-4242dc8a611d435cb337d09eb1adac5c.csv
notebooks/: retrieve_availability.ipynb  retrieve_availability_proto.ipynb
notebooks/.ipynb_checkpoints/: retrieve_availability-checkpoint.ipynb
scripts/: get_updates.cmd  retrieve_availability.py
src/rogue_river_spaces_monitor/: __init__.py
